--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,32 +1,32 @@
 ---
 galaxy_info:
   author: Emilien Mantel
-  description: Install and configure PHP 7.0/7.1/7.2/7.3
+  description: Install and configure PHP 7.0/7.1/7.2/7.3/7.4/8.0
   company:
   license: GPLv2
-  min_ansible_version: 2.6
+  min_ansible_version: 2.11
   platforms:
-  - name: Debian
-    versions:
-    - stretch
-    - buster
-  - name: Ubuntu
-    versions:
-    - xenial
-    - bionic
-  - name: FreeBSD
-    versions:
-    - 11.0
-    - 11.1
-    - 12.0
+    - name: Debian
+      versions:
+        - stretch
+        - buster
+        - bullseye
+    - name: Ubuntu
+      versions:
+        - bionic
+    - name: FreeBSD
+      versions:
+        - 11.0
+        - 11.1
+        - 12.0
   galaxy_tags:
-  - development
-  - web
-  - php
-  - php-fpm
-  - php7
-  - debian
-  - ubuntu
-  - freebsd
+    - development
+    - web
+    - php
+    - fpm
+    - php7
+    - php8
+    - debian
+    - ubuntu
+    - freebsd
 dependencies: []
-
