--- a/tasks/opcache.yml
+++ b/tasks/opcache.yml
@@ -2,36 +2,42 @@
 
 - block:
 
-  - name: APT | Install APCu
-    apt:
-      pkg: "php-apcu"
+    - name: APT | Install APCu
+      ansible.builtin.apt:
+        pkg: "php-apcu"
 
-  - name: APT | Install Opcache
-    apt:
-      pkg: "{{ php_package_prefix }}opcache"
+    - name: APT | Install Opcache
+      ansible.builtin.apt:
+        pkg: "{{ php_package_prefix }}opcache"
 
   when: ansible_os_family == 'Debian'
 
 - block:
 
-  - name: PKGNG | Install APCu
-    pkgng:
-      name: "php{{ php_version | replace('.', '') }}-pecl-APCu"
+    - name: PKGNG | Install APCu
+      community.general.pkgng:
+        name: "php{{ php_version | replace('.', '') }}-pecl-APCu"
 
-  - name: PKGNG | Install Opcache
-    pkgng:
-      name: "{{ php_package_prefix }}opcache"
+    - name: PKGNG | Install Opcache
+      community.general.pkgng:
+        name: "{{ php_package_prefix }}opcache"
 
   when: ansible_os_family == 'FreeBSD'
 
 - name: TEMPLATE | Configure Opcache
-  template:
+  ansible.builtin.template:
     src: "etc/__php__/mods-available/opcache.ini.j2"
     dest: "{{ php_mods_dir }}/opcache.ini"
+    owner: root
+    group: root
+    mode: 0644
   notify: restart php-fpm
 
 - name: TEMPLATE | Configure APCu
-  template:
+  ansible.builtin.template:
     src: "etc/__php__/mods-available/apcu.ini.j2"
     dest: "{{ php_mods_dir }}/apcu.ini"
+    owner: root
+    group: root
+    mode: 0644
   notify: restart php-fpm
