--- a/tests/includes/pre_Debian.yml
+++ b/tests/includes/pre_Debian.yml
@@ -1,25 +1,24 @@
 ---
 
 - name: SET_FACT | Prepare test vars
-  set_fact:
+  ansible.builtin.set_fact:
     __nginx_conf: /etc/nginx/nginx.conf
 
 - name: APT | Install packages
-  apt:
+  ansible.builtin.apt:
     pkg: "{{ p }}"
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 3600
   vars:
     p:
       - apt-transport-https
       - ca-certificates
       - curl
+      - gpg
       - lsb-release
       - nginx
       - vim
 
 - name: INCLUDE_TASKS | Sury
-  include_tasks: Debian/sury.yml
-  when:
-    ((ansible_distribution_major_version is version('9', 'eq')) and (php_version is version('7.1', 'ge'))) or
-    ((ansible_distribution_major_version is version('10', 'eq')) and (php_version is version('7.4', 'ge')))
+  ansible.builtin.include_tasks: Debian/sury.yml
+  when: php_version != php_default_version
