--- a/tests/includes/pre_FreeBSD.yml
+++ b/tests/includes/pre_FreeBSD.yml
@@ -1,10 +1,10 @@
 ---
 
 - name: SET_FACT | Prepare test vars
-  set_fact:
+  ansible.builtin.set_fact:
     __nginx_conf: /usr/local/etc/nginx/nginx.conf
     php_xdebug_package: 'php72-pecl-xdebug-2.6.1'
 
 - name: PKGNG | Install packages
-  pkgng:
+  community.general.pkgng:
     name: ['curl', 'nginx']
