--- a/tasks/xdebug.yml
+++ b/tasks/xdebug.yml
@@ -8,6 +8,7 @@
         state: present
         update_cache: true
         cache_valid_time: 3600
+        install_recommends: false
       when: ansible_os_family == 'Debian'
 
     - name: PKGNG | Install xdebug
