Fix lint errors due to ansible-lint latest versions

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,9 @@
 ---
 galaxy_info:
   author: Emilien Mantel
-  description: Install and configure PHP 7.0/7.1/7.2/7.3/7.4/8.0
+  role_name: php
+  namespace: hanxhx
+  description: Install and configure PHP 7.x/8.x
   company:
   license: GPLv2
   min_ansible_version: 2.11
