--- a/tasks/xdebug.yml
+++ b/tasks/xdebug.yml
@@ -1,6 +1,8 @@
 ---
 
-- block:
+- name: BLOCK | Uninstall xdebug
+  when: php_install_xdebug
+  block:
 
     - name: APT | Install xdebug
       ansible.builtin.apt:
@@ -24,9 +26,10 @@
         mode: 0644
       notify: restart php-fpm
 
-  when: php_install_xdebug
 
-- block:
+- name: BLOCK | Uninstall xdebug
+  when: not php_install_xdebug
+  block:
 
     - name: APT | Uninstall xdebug
       ansible.builtin.apt:
@@ -39,5 +42,3 @@
         name: "{{ php_xdebug_package }}"
         state: absent
       when: ansible_os_family == 'FreeBSD'
-
-  when: not php_install_xdebug
