--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -22,7 +22,7 @@
     group: root
     mode: 0644
   loop: "{{ php_ini | combine(php_ini_fpm) | dict2items }}"
-  notify: restart php-fpm
+  notify: Restart php-fpm
 
 - name: TEMPLATE | Deploy pool configuration
   ansible.builtin.template:
@@ -32,11 +32,11 @@
     group: root
     mode: 0644
   loop: "{{ ansible_local.hanxhx_php.fpm_pool }}"
-  notify: restart php-fpm
+  notify: Restart php-fpm
 
 - name: FILE | Delete default pool if necessary
   ansible.builtin.file:
     path: "{{ php_fpm_pool_dir }}/www.conf"
     state: absent
   when: '"www" not in (ansible_local.hanxhx_php.fpm_pool | map(attribute="name") | list) and php_autoremove_default_pool'
-  notify: restart php-fpm
+  notify: Restart php-fpm
