--- a/tasks/xdebug.yml
+++ b/tasks/xdebug.yml
@@ -24,7 +24,7 @@
         dest: "{{ php_mods_dir }}/xdebug.ini"
         owner: root
         mode: 0644
-      notify: restart php-fpm
+      notify: Restart php-fpm
 
 
 - name: BLOCK | Uninstall xdebug
