--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,12 @@
 ---
-
 galaxy_info:
   author: Emilien Mantel
   role_name: php
   namespace: hanxhx
   description: Install and configure PHP 7.x/8.x
-  company:
+  company: TripleStack
   license: GPLv2
-  min_ansible_version: 2.11
+  min_ansible_version: '2.11'
   platforms:
     - name: Debian
       versions:
@@ -19,9 +18,9 @@ galaxy_info:
         - bionic
     - name: FreeBSD
       versions:
-        - 11.0
-        - 11.1
-        - 12.0
+        - '11.0'
+        - '11.1'
+        - '12.0'
   galaxy_tags:
     - development
     - web
