--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -5,7 +5,7 @@
     name: '{{ php_fpm_service }}'
     state: restarted
   when: php_install_fpm
-  notify: docker restart php-fpm
+  notify: Docker restart php-fpm
 
 - name: Docker restart php-fpm
   ansible.builtin.command: 'service {{ php_fpm_service }} restart'
