--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,15 @@
 ---
 galaxy_info:
   author: Emilien Mantel
-  description: Install and configure PHP 7.0/7.1/7.2/7.3/7.4/8.0
-  company:
+  role_name: php
+  namespace: hanxhx
+  description: Install and configure PHP 7.x/8.x
+  company: TripleStack
   license: GPLv2
-  min_ansible_version: 2.11
+  min_ansible_version: '2.11'
   platforms:
     - name: Debian
       versions:
-        - stretch
         - buster
         - bullseye
     - name: Ubuntu
@@ -16,9 +17,9 @@ galaxy_info:
         - bionic
     - name: FreeBSD
       versions:
-        - 11.0
-        - 11.1
-        - 12.0
+        - '11.0'
+        - '11.1'
+        - '12.0'
   galaxy_tags:
     - development
     - web
@@ -29,4 +30,5 @@ galaxy_info:
     - debian
     - ubuntu
     - freebsd
+
 dependencies: []
