--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,13 @@
 ---
 
-- name: restart php-fpm
+- name: Restart php-fpm
   ansible.builtin.service:
     name: '{{ php_fpm_service }}'
     state: restarted
   when: php_install_fpm
-  notify: docker restart php-fpm
+  notify: Docker restart php-fpm
 
-- name: docker restart php-fpm
+- name: Docker restart php-fpm
   ansible.builtin.command: 'service {{ php_fpm_service }} restart'
   args:
     warn: false
