--- a/tasks/opcache.yml
+++ b/tasks/opcache.yml
@@ -1,6 +1,8 @@
 ---
 
-- block:
+- name: Install opcache/apcu on Debian
+  when: ansible_os_family == 'Debian'
+  block:
 
     - name: APT | Install APCu
       ansible.builtin.apt:
@@ -12,9 +14,10 @@
         pkg: "{{ php_package_prefix }}opcache"
         install_recommends: false
 
-  when: ansible_os_family == 'Debian'
 
-- block:
+- name: Install opcache/apcu on FreeBSD
+  when: ansible_os_family == 'FreeBSD'
+  block:
 
     - name: PKGNG | Install APCu
       community.general.pkgng:
@@ -24,8 +27,6 @@
       community.general.pkgng:
         name: "{{ php_package_prefix }}opcache"
 
-  when: ansible_os_family == 'FreeBSD'
-
 - name: TEMPLATE | Configure Opcache
   ansible.builtin.template:
     src: "etc/__php__/mods-available/opcache.ini.j2"
@@ -33,7 +34,7 @@
     owner: root
     group: root
     mode: 0644
-  notify: restart php-fpm
+  notify: Restart php-fpm
 
 - name: TEMPLATE | Configure APCu
   ansible.builtin.template:
@@ -42,4 +43,4 @@
     owner: root
     group: root
     mode: 0644
-  notify: restart php-fpm
+  notify: Restart php-fpm
