--- a/tests/test.yml
+++ b/tests/test.yml
@@ -25,6 +25,8 @@
         ping_response: 'ok'
       - name: 'test_ansible2'
         user: 'foo'
+        php_env:
+          foo: bar
         php_value:
           display_errors: 'Off'
         php_admin_value:
