honor php_install_fpm in case it is set to 'false'

--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -22,6 +22,7 @@
     group: root
     mode: 0644
   loop: "{{ php_ini | combine(php_ini_fpm) | dict2items }}"
+  when: php_install_fpm | bool
   notify: Restart php-fpm
 
 - name: TEMPLATE | Deploy pool configuration
@@ -32,11 +33,14 @@
     group: root
     mode: 0644
   loop: "{{ ansible_local.hanxhx_php.fpm_pool }}"
+  when: php_install_fpm | bool
   notify: Restart php-fpm
 
 - name: FILE | Delete default pool if necessary
   ansible.builtin.file:
     path: "{{ php_fpm_pool_dir }}/www.conf"
     state: absent
-  when: '"www" not in (ansible_local.hanxhx_php.fpm_pool | map(attribute="name") | list) and php_autoremove_default_pool'
+  when:
+    - '"www" not in (ansible_local.hanxhx_php.fpm_pool | map(attribute="name") | list) and php_autoremove_default_pool'
+    - php_install_fpm | bool
   notify: Restart php-fpm
