--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,8 +7,6 @@
   when: php_install_fpm
   notify: Docker restart php-fpm
 
-- name: Docker restart php-fpm
+- name: Docker restart php-fpm  # noqa: command-instead-of-module no-changed-when
   ansible.builtin.command: 'service {{ php_fpm_service }} restart'
-  args:
-    warn: false
   when: ansible_virtualization_type == 'docker'
