--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -114,16 +114,12 @@
   when: php_install_fpm and ansible_virtualization_type == 'docker'
   block:
 
-    - name: COMMAND | Check if PHP-FPM is started (Docker)
+    - name: COMMAND | Check if PHP-FPM is started (Docker)  # noqa: command-instead-of-module
       ansible.builtin.command: 'service {{ php_fpm_service }} status'
-      args:
-        warn: false
       register: dps
       changed_when: false
       failed_when: false
 
-    - name: COMMAND | Ensure PHP-FPM is started (Docker)
+    - name: COMMAND | Ensure PHP-FPM is started (Docker)  # noqa: command-instead-of-module no-changed-when
       ansible.builtin.command: 'service {{ php_fpm_service }} start'
-      args:
-        warn: false
       when: dps.stdout.find('is not running') != -1
