--- a/tasks/xdebug.yml
+++ b/tasks/xdebug.yml
@@ -1,7 +1,8 @@
 ---
 
-- block:
-
+- name: BLOCK | Install Xdebug
+  when: php_install_xdebug
+  block:
     - name: APT | Install xdebug
       ansible.builtin.apt:
         pkg: "{{ php_xdebug_package }}"
@@ -11,33 +12,16 @@
         install_recommends: false
       when: ansible_os_family == 'Debian'
 
-    - name: PKGNG | Install xdebug
-      community.general.pkgng:
-        name: "{{ php_xdebug_package }}"
-      when: ansible_os_family == 'FreeBSD' and php_xdebug_package is defined
-
     - name: TEMPLATE | Deploy module configurations
       ansible.builtin.template:
         src: "etc/__php__/mods-available/xdebug.ini.j2"
         dest: "{{ php_mods_dir }}/xdebug.ini"
         owner: root
         mode: 0644
-      notify: restart php-fpm
+      notify: Restart php-fpm
 
-  when: php_install_xdebug
-
-- block:
-
-    - name: APT | Uninstall xdebug
-      ansible.builtin.apt:
-        pkg: "{{ php_xdebug_package }}"
-        state: absent
-      when: ansible_os_family == 'Debian'
-
-    - name: PKGNG | Uninstall xdebug
-      community.general.pkgng:
-        name: "{{ php_xdebug_package }}"
-        state: absent
-      when: ansible_os_family == 'FreeBSD'
-
+- name: APT | Uninstall xdebug
+  ansible.builtin.apt:
+    pkg: "{{ php_xdebug_package }}"
+    state: absent
   when: not php_install_xdebug
