:art: Fix warnings in Ansible Galaxy

--- a/molecule/_shared/converge.yml
+++ b/molecule/_shared/converge.yml
@@ -17,7 +17,7 @@
       ansible.builtin.template:
         src: "templates/nginx.conf.j2"
         dest: "{{ __nginx_conf }}"
-        mode: 0644
+        mode: "0644"
         owner: root
         group: root
       notify: Reload nginx
